--- a/README
+++ b/README
@@ -1,1 +1,110 @@
-Lossy wavelet-based and Lossless HPC data compression of 3D scientific data
+CubismZ: Lossy wavelet-based and Lossless HPC data compression of 3D scientific data
+
+
+*) Design 
+
+- Substage 1: floating point compression
+
+	-Wavelets (CSELAB)
+	-FPZIP (LLNL)
+	-ZFP (LLNL)
+	-SZ (ANL)
+
+
+- Substage 2: general-purpose lossless compression
+
+	- ZLIB, LZ4
+	- data shuffling, bit zeroing can be applied first (for wavelets)
+
+A more detailed description can be found in the paper. 
+
+
+*) Compilation 
+
+**) Basic options
+	a) Conversion to the CZ format without data compression
+	make clean; make 
+
+	b) Wavelets + ZLIB 
+	make clean; make wavz=1 zlib=1
+
+	c) ZFP
+	make clean; make zfp = 1
+
+	d) FPZIP 
+	make clean; make fpzip=1
+
+	e) SZ
+	make clean; make sz=1
+
+**) Additional options
+
+	- Wavelets + Shuffling + ZLIB
+	make clean;make wavz=1 shuffle3=1 zlib=1
+
+	- Wavelets + LZ4
+	make clean; make wavz=1 zlib=1
+
+
+*) Runtime argument of the basic CubismZ tools: 
+
+a) The hdf2cz tool 
+
+
+Syntax: 
+./hdf2cz -bpdx <nbx> -bpdy <nby> -bpdz <nbz>  -simdata <hdf5 file> -outdata <compressed file> -threshold <e> [-wtype <wt>]
+
+- The HDF5 file consists of nbx * nby * nbz 3D blocks
+- The input HDF5 file is compressed and stored to <compressed file> 
+- The threshold specifies how lossy the compression will be 
+-  The wavelet type can be also specified 
+
+- Compile time options:
+	- block dimension (typically 323)
+	- compression methods for first and second substage
+
+
+Examples:
+
+b) The ch2hdf tool 
+
+Decompression of CZ files and convertion to HDF5 format
+
+./cz2hdf -simdata <compressed file> -h5file <h5 file>
+
+- Decompress and store in HDF5 format
+- The output file can be visualized with Paraview
+- Compile time options (block size, compression scheme) must agree with those used for the compression phase
+
+
+Examples:
+
+c) The cz2diff tool 
+
+Decompress and compare two previously CZ files
+
+./cz2diff -simdata1 <compressed file 1> -simdata2 <compressed file 2>
+
+- The second CZ file is used as reference dataset and must have been generated 
+  by the default configuration of the hdf2cz tool, i.e. without any compression method enabled
+- Useful for quality assessment of the compression
+
+
+Examples:
+
+
+
+*) Testing 
+
+1. Build the executables for the basic options 
+
+2. Tests/Test1:
+	generate a reference CZ file for an input HDF5 file using the default compilation option (no compression) 
+	for each of the rest four basic options
+		- compress the HDF5 file using the corresponding hdf2cz tool
+		- compute the compression statistics (ratio, errors, PSNR value) using the corresponding cz2diff tool
+
+3. Tests/Test2:
+	compress an input HDF5 file using the hdf2cz tool and the wavelets + zlib compression scheme
+	decompress and convert back the compressed CZ file to HDF5 format 
+	visualize the generated HDF5 file
