OpenMP stubs for LZ4

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,6 @@ Authors and contributors:
 
 Panagiotis Hadjidoukas (phadjido@mavt.ethz.ch)
 Fabian Wermelinger (fabianw@mavt.ethz.ch)
-Diego Rossinelli ()
-Ursula Rasthofer ()
+Diego Rossinelli (rossinelli.diego@gmail.com)
+Ursula Rasthofer (urasthofer@ethz.ch)
 Petros Koumoutsakos (petros@ethz.ch)
